--- a/HeartSync/Base.lproj/Main.storyboard
+++ b/HeartSync/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="HeartSync" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,8 +15,119 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1ET-wD-dtI">
+                                <rect key="frame" x="140" y="314" width="321" height="177"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z4J-Be-ff3">
+                                        <rect key="frame" x="22" y="26" width="113" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="113" id="Rev-Ev-nNL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
+                                        <state key="normal" title="Load HRM Data">
+                                            <color key="titleColor" red="0.1825534738" green="0.1843167289" blue="0.1843434343" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="loadHRMData:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="jBt-x1-gNL"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDK-Pc-Bdr">
+                                        <rect key="frame" x="184" y="26" width="113" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="113" id="FlH-fR-VAi"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
+                                        <state key="normal" title="Start Checking">
+                                            <color key="titleColor" red="0.1825534738" green="0.1843167289" blue="0.1843434343" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="FlH-fR-VAi"/>
+                                            </mask>
+                                        </variation>
+                                        <connections>
+                                            <action selector="startChecking:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Ydl-vs-7kg"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KxS-yw-3ft">
+                                        <rect key="frame" x="22" y="83" width="113" height="30"/>
+                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
+                                        <state key="normal" title="Load PM Data">
+                                            <color key="titleColor" red="0.1825534738" green="0.1843167289" blue="0.1843434343" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="loadPMData:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="kHc-uJ-eAL"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yAv-6L-HFo">
+                                        <rect key="frame" x="184" y="83" width="113" height="30"/>
+                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
+                                        <state key="normal" title="Stop Checking">
+                                            <color key="titleColor" red="0.1825534738" green="0.1843167289" blue="0.1843434343" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="stopChecking:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FsX-Uc-WPm"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WCU-aY-C6M">
+                                        <rect key="frame" x="109" y="127" width="103" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="103" id="AGU-QS-NeU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
+                                        <state key="normal" title="Detail View">
+                                            <color key="titleColor" red="0.1825534738" green="0.1843167289" blue="0.1843434343" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="detailView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Ix0-UX-mrQ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="ZDK-Pc-Bdr" firstAttribute="leading" secondItem="Z4J-Be-ff3" secondAttribute="trailing" constant="49" id="2hz-f4-bZo"/>
+                                    <constraint firstItem="WCU-aY-C6M" firstAttribute="top" secondItem="yAv-6L-HFo" secondAttribute="bottom" constant="14" id="COX-LX-vq5"/>
+                                    <constraint firstAttribute="trailing" secondItem="yAv-6L-HFo" secondAttribute="trailing" constant="24" id="EAm-nh-Ble"/>
+                                    <constraint firstItem="ZDK-Pc-Bdr" firstAttribute="width" secondItem="Z4J-Be-ff3" secondAttribute="width" id="FXT-yo-gbG"/>
+                                    <constraint firstItem="WCU-aY-C6M" firstAttribute="centerX" secondItem="1ET-wD-dtI" secondAttribute="centerX" id="Jcn-bI-w9b"/>
+                                    <constraint firstItem="yAv-6L-HFo" firstAttribute="baseline" secondItem="KxS-yw-3ft" secondAttribute="baseline" id="O53-s2-2od"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZDK-Pc-Bdr" secondAttribute="trailing" constant="24" id="VxN-sM-lMp"/>
+                                    <constraint firstItem="Z4J-Be-ff3" firstAttribute="leading" secondItem="KxS-yw-3ft" secondAttribute="leading" id="bUx-Ur-zEW"/>
+                                    <constraint firstItem="KxS-yw-3ft" firstAttribute="width" secondItem="Z4J-Be-ff3" secondAttribute="width" id="lKL-kB-Xyu"/>
+                                    <constraint firstItem="yAv-6L-HFo" firstAttribute="width" secondItem="ZDK-Pc-Bdr" secondAttribute="width" id="mWL-4s-QaE"/>
+                                    <constraint firstItem="KxS-yw-3ft" firstAttribute="top" secondItem="Z4J-Be-ff3" secondAttribute="bottom" constant="27" id="nDZ-Ti-RR3"/>
+                                    <constraint firstItem="Z4J-Be-ff3" firstAttribute="leading" secondItem="1ET-wD-dtI" secondAttribute="leading" constant="22" id="r7W-fb-AFa"/>
+                                    <constraint firstItem="Z4J-Be-ff3" firstAttribute="baseline" secondItem="ZDK-Pc-Bdr" secondAttribute="baseline" id="t7q-Hg-wVM"/>
+                                    <constraint firstAttribute="height" constant="177" id="u4C-T2-j77"/>
+                                    <constraint firstItem="yAv-6L-HFo" firstAttribute="centerX" secondItem="ZDK-Pc-Bdr" secondAttribute="centerX" id="u8n-k9-Ewo"/>
+                                    <constraint firstItem="Z4J-Be-ff3" firstAttribute="top" secondItem="1ET-wD-dtI" secondAttribute="top" constant="26" id="z3a-2O-MVh"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="EAm-nh-Ble"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1ET-wD-dtI" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="FMC-ZU-fJZ"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="1ET-wD-dtI" secondAttribute="bottom" constant="109" id="qIy-Be-y2I"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="detailViewButton" destination="WCU-aY-C6M" id="O6W-lA-hTr"/>
+                        <outlet property="loadHRMDataButton" destination="Z4J-Be-ff3" id="atF-dj-GbT"/>
+                        <outlet property="loadPMDataButton" destination="KxS-yw-3ft" id="zGd-Vu-59R"/>
+                        <outlet property="startCheckingButton" destination="ZDK-Pc-Bdr" id="VNs-Ix-3U6"/>
+                        <outlet property="stopCheckingButton" destination="yAv-6L-HFo" id="0pE-pt-ldq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
