--- a/HeartSync/Base.lproj/Main.storyboard
+++ b/HeartSync/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WCU-aY-C6M">
-                                        <rect key="frame" x="109" y="127" width="103" height="30"/>
+                                        <rect key="frame" x="189" y="132" width="103" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="103" id="AGU-QS-NeU"/>
                                         </constraints>
@@ -88,15 +88,33 @@
                                             <action selector="detailView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Ix0-UX-mrQ"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJ8-E4-H9s">
+                                        <rect key="frame" x="27" y="132" width="103" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="103" id="9h8-qg-ilG"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
+                                        <state key="normal" title="Authorize">
+                                            <color key="titleColor" red="0.1825534738" green="0.1843167289" blue="0.1843434343" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="authorizeHealthKit:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="5Zi-q7-TfA"/>
+                                            <action selector="detailView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ZzG-MA-ZHG"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="ZJ8-E4-H9s" firstAttribute="centerX" secondItem="KxS-yw-3ft" secondAttribute="centerX" id="1xj-CQ-jPD"/>
                                     <constraint firstItem="ZDK-Pc-Bdr" firstAttribute="leading" secondItem="Z4J-Be-ff3" secondAttribute="trailing" constant="49" id="2hz-f4-bZo"/>
-                                    <constraint firstItem="WCU-aY-C6M" firstAttribute="top" secondItem="yAv-6L-HFo" secondAttribute="bottom" constant="14" id="COX-LX-vq5"/>
+                                    <constraint firstItem="WCU-aY-C6M" firstAttribute="top" secondItem="yAv-6L-HFo" secondAttribute="bottom" constant="19" id="COX-LX-vq5"/>
                                     <constraint firstAttribute="trailing" secondItem="yAv-6L-HFo" secondAttribute="trailing" constant="24" id="EAm-nh-Ble"/>
                                     <constraint firstItem="ZDK-Pc-Bdr" firstAttribute="width" secondItem="Z4J-Be-ff3" secondAttribute="width" id="FXT-yo-gbG"/>
-                                    <constraint firstItem="WCU-aY-C6M" firstAttribute="centerX" secondItem="1ET-wD-dtI" secondAttribute="centerX" id="Jcn-bI-w9b"/>
+                                    <constraint firstItem="WCU-aY-C6M" firstAttribute="centerX" secondItem="1ET-wD-dtI" secondAttribute="centerX" constant="80" id="Jcn-bI-w9b"/>
+                                    <constraint firstItem="ZJ8-E4-H9s" firstAttribute="baseline" secondItem="WCU-aY-C6M" secondAttribute="baseline" id="MaG-5w-Y6i"/>
                                     <constraint firstItem="yAv-6L-HFo" firstAttribute="baseline" secondItem="KxS-yw-3ft" secondAttribute="baseline" id="O53-s2-2od"/>
+                                    <constraint firstItem="ZJ8-E4-H9s" firstAttribute="width" secondItem="WCU-aY-C6M" secondAttribute="width" id="RjT-c5-Ja3"/>
                                     <constraint firstAttribute="trailing" secondItem="ZDK-Pc-Bdr" secondAttribute="trailing" constant="24" id="VxN-sM-lMp"/>
                                     <constraint firstItem="Z4J-Be-ff3" firstAttribute="leading" secondItem="KxS-yw-3ft" secondAttribute="leading" id="bUx-Ur-zEW"/>
                                     <constraint firstItem="KxS-yw-3ft" firstAttribute="width" secondItem="Z4J-Be-ff3" secondAttribute="width" id="lKL-kB-Xyu"/>
@@ -122,6 +140,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="authorizeButton" destination="ZJ8-E4-H9s" id="6Tq-pN-Ngp"/>
                         <outlet property="detailViewButton" destination="WCU-aY-C6M" id="O6W-lA-hTr"/>
                         <outlet property="loadHRMDataButton" destination="Z4J-Be-ff3" id="atF-dj-GbT"/>
                         <outlet property="loadPMDataButton" destination="KxS-yw-3ft" id="zGd-Vu-59R"/>
