--- a/HeartSync/Base.lproj/Main.storyboard
+++ b/HeartSync/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -66,12 +66,12 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yAv-6L-HFo">
                                         <rect key="frame" x="184" y="83" width="113" height="30"/>
                                         <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
-                                        <state key="normal" title="Stop Checking">
+                                        <state key="normal" title="Push Data">
                                             <color key="titleColor" red="0.1825534738" green="0.1843167289" blue="0.1843434343" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="stopChecking:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FsX-Uc-WPm"/>
+                                            <action selector="pushData:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="sdH-zA-LbW"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WCU-aY-C6M">
@@ -80,12 +80,12 @@
                                             <constraint firstAttribute="width" constant="103" id="AGU-QS-NeU"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
-                                        <state key="normal" title="Detail View">
+                                        <state key="normal" title="Swap Data">
                                             <color key="titleColor" red="0.1825534738" green="0.1843167289" blue="0.1843434343" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="detailView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Ix0-UX-mrQ"/>
+                                            <action selector="swapHRMData:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="AEW-id-Vi8"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJ8-E4-H9s">
@@ -163,12 +163,12 @@
                     <connections>
                         <outlet property="activityIndicator" destination="fAu-GL-A75" id="aAP-Hv-dty"/>
                         <outlet property="authorizeButton" destination="ZJ8-E4-H9s" id="6Tq-pN-Ngp"/>
-                        <outlet property="detailViewButton" destination="WCU-aY-C6M" id="O6W-lA-hTr"/>
                         <outlet property="loadHRMDataButton" destination="Z4J-Be-ff3" id="atF-dj-GbT"/>
                         <outlet property="loadPMDataButton" destination="KxS-yw-3ft" id="zGd-Vu-59R"/>
+                        <outlet property="pushDataButton" destination="yAv-6L-HFo" id="SLl-EO-er9"/>
                         <outlet property="startCheckingButton" destination="ZDK-Pc-Bdr" id="VNs-Ix-3U6"/>
                         <outlet property="statusLabel" destination="TgG-Vo-hKm" id="5cD-9C-sGp"/>
-                        <outlet property="stopCheckingButton" destination="yAv-6L-HFo" id="0pE-pt-ldq"/>
+                        <outlet property="swapDataButton" destination="WCU-aY-C6M" id="yOf-x3-eXA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
