--- a/HeartSync/Base.lproj/Main.storyboard
+++ b/HeartSync/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="pushData:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="sdH-zA-LbW"/>
+                                            <action selector="pushData:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ccg-eL-bXS"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WCU-aY-C6M">
@@ -140,12 +140,21 @@
                                 <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ready" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TgG-Vo-hKm">
-                                <rect key="frame" x="226" y="542" width="150" height="18"/>
+                                <rect key="frame" x="225" y="562" width="150" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="6TV-Ws-6RS"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7bK-5K-ShB">
+                                <rect key="frame" x="412" y="519" width="51" height="31"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DataSync On" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TmO-1L-nBW">
+                                <rect key="frame" x="140" y="529" width="92" height="18"/>
+                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -154,14 +163,19 @@
                             <constraint firstItem="TgG-Vo-hKm" firstAttribute="centerX" secondItem="1ET-wD-dtI" secondAttribute="centerX" id="0Qm-7u-irE"/>
                             <constraint firstAttribute="centerX" secondItem="fAu-GL-A75" secondAttribute="centerX" id="E6P-l9-cI0"/>
                             <constraint firstItem="1ET-wD-dtI" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="FMC-ZU-fJZ"/>
-                            <constraint firstItem="TgG-Vo-hKm" firstAttribute="top" secondItem="1ET-wD-dtI" secondAttribute="bottom" constant="51" id="cyc-gx-nWJ"/>
+                            <constraint firstItem="1ET-wD-dtI" firstAttribute="trailing" secondItem="7bK-5K-ShB" secondAttribute="trailing" id="OdC-Am-Hk2"/>
+                            <constraint firstItem="TmO-1L-nBW" firstAttribute="top" secondItem="1ET-wD-dtI" secondAttribute="bottom" constant="38" id="SgQ-oy-Jsm"/>
+                            <constraint firstItem="TgG-Vo-hKm" firstAttribute="top" secondItem="1ET-wD-dtI" secondAttribute="bottom" constant="71" id="cyc-gx-nWJ"/>
+                            <constraint firstItem="1ET-wD-dtI" firstAttribute="leading" secondItem="TmO-1L-nBW" secondAttribute="leading" id="hjt-l1-5ys"/>
                             <constraint firstItem="fAu-GL-A75" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="147" id="krH-tl-OQ4"/>
+                            <constraint firstItem="7bK-5K-ShB" firstAttribute="top" secondItem="1ET-wD-dtI" secondAttribute="bottom" constant="28" id="pLg-Eo-vUO"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="1ET-wD-dtI" secondAttribute="bottom" constant="109" id="qIy-Be-y2I"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="activityIndicator" destination="fAu-GL-A75" id="aAP-Hv-dty"/>
                         <outlet property="authorizeButton" destination="ZJ8-E4-H9s" id="6Tq-pN-Ngp"/>
+                        <outlet property="dataSyncSwitch" destination="7bK-5K-ShB" id="1Am-OD-kl7"/>
                         <outlet property="loadHRMDataButton" destination="Z4J-Be-ff3" id="atF-dj-GbT"/>
                         <outlet property="loadPMDataButton" destination="KxS-yw-3ft" id="zGd-Vu-59R"/>
                         <outlet property="pushDataButton" destination="yAv-6L-HFo" id="SLl-EO-er9"/>
